# DevOps-Core-Course

.github/workflows/: python-ci.yml
app_python/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  app_stats.py  healthcheck.py  pyproject.toml  requirements-dev.txt  requirements.txt  version.env
app_python/.github/workflows/: python-ci.yml
app_python/docs/: LAB01.md  LAB02.md  LAB03.md
app_python/tests/: test_app_stats.py  test_endpoints.py
app_python/utils/: json_auditor.py
